# libunicodenamesxx

./: .hgignore  .hgtags  AUTHORS  ChangeLog  GNUmakefile.in  INSTALL.git  INSTALL.hg  Makefile.am  NEWS  README  README.md  autogen.sh  common_code.c  configure.ac  cxx_bindings.cxx  en.blocks-db  en.names-db  extract-text.scm  find_db.c  find_names_db.c  fr.blocks-db  fr.names-db  indent.am  indent.mk  indent.mk.in  indent.pro.in  libgettext.h  libunicodenames++.h  libunicodenames++.pc.in  libunicodenames.c  libunicodenames.func.texi  libunicodenames.h  libunicodenames.pc.in  libunicodenames.sym  libunicodenames.texi  libunicodenames.type.texi  make-blocks-db.awk  make-names-db.awk  noinst_header.h  unicodenames.i.in  (+2 more)
doc/: libunicodenames++.3  libunicodenames++.h.3
examples/: print_blocks.cxx  print_names.cxx
m4/: gnulib-cache.m4  stm_config_makefiles.m4
po/: Makevars  POTFILES.in  Rules-doc  fr.gmo  fr.po
rpm/: README  libunicodenamesxx.spec
tests/: GNUmakefile.am  Makefile.am  Makefile.in  atlocal.in  blocks.py  blocks_index_error.py  c_create_delete.c  c_names_db_locale.c  c_patch_test.c  create_delete.py  cxx_create_delete.cxx  cxx_names_db_locale.cxx  cxx_patch_test.cxx  import_unicodenames.py  names_db_locale.py  patch_test.py  testsuite.at
